<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_seach"
        android:title="@string/search"
        app:actionViewClass = "android.support.v7.widget.SearchView"
        app:showAsAction = "ifRoom"/>
    <item android:id="@+id/menu_item_clear"
          android:title="@string/clear_search"
          app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_new_contact"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/new_contact"
        app:showAsAction = "ifRoom|withText"
    />
    <item
        android:id="@+id/menu_item_load_contacts"
        android:title="@string/load_contact"
        app:showAsAction = "ifRoom"/>
    <item
        android:id="@+id/menu_item_load_contacts_firebase"
        android:title="@string/load_contact_firebase"
        app:showAsAction = "ifRoom"/>
</menu>